--- a/09.Regular Grammar.md
+++ b/09.Regular Grammar.md
@@ -1,1 +1,10 @@
 ![[Grammar.png]]
+
+![[RIght and Left Regular Grammar.png]]
+<br> <br>
+
+---
+<br> <br>
+
+![[Language From Grammar - 1.png]]![[Language From Grammar - 2.png]]
+Here it must be m > 0 and n > 0.
