--- a/04.Moore machine.md
+++ b/04.Moore machine.md
@@ -47,3 +47,8 @@
     
 - Since outputs are tied to states, make sure each state has a meaningful output that corresponds to the sequence you've processed so far.
     
+----
+![[Moore - 1.png]]
+<br> <br>
+![[Moore - 2.png]]<br> <br>
+![[Moore - 3.png]]
