--- a/05.Conversion between Mealy and Moore.md
+++ b/05.Conversion between Mealy and Moore.md
@@ -1,6 +1,8 @@
 ### 🧠 **How to Convert Between Moore and Mealy Machines**
 
-To **convert a Moore machine to a Mealy machine**, you shift the **output from the state to the transitions**. For each transition in the Moore machine, take the **output of the state you're going to**, and assign it to that transition in the Mealy machine. Since Mealy machines produce output on transitions, the output now depends on the **next state’s output** from the Moore version. On the other hand, to **convert a Mealy machine to a Moore machine**, you may need to **create more states**. That’s because if a state in the Mealy machine has transitions with **different outputs**, you’ll have to **split that state into multiple states** in the Moore version, each with a **fixed output**. Then, adjust the transitions so that the new states behave the same as the Mealy machine but with the output fixed per state (as Moore machines require). The key idea is: Mealy machines are often more compact, while Moore machines may need extra states to keep outputs state-based.
+To **convert a Moore machine to a Mealy machine**, you shift the **output from the state to the transitions**. For each transition in the Moore machine, take the **output of the state you're going to**, and assign it to that transition in the Mealy machine. Since Mealy machines produce output on transitions, the output now depends on the **next state’s output** from the Moore version. 
+
+On the other hand, to **convert a Mealy machine to a Moore machine**, you may need to **create more states**. That’s because if a state in the Mealy machine has transitions with **different outputs**, you’ll have to **split that state into multiple states** in the Moore version, each with a **fixed output**. Then, adjust the transitions so that the new states behave the same as the Mealy machine but with the output fixed per state (as Moore machines require). The key idea is: Mealy machines are often more compact, while Moore machines may need extra states to keep outputs state-based.
 
 ---
 ### 🔄 **Converting Moore ↔ Mealy from a Transition Table**
@@ -65,3 +67,6 @@ You **can’t directly assign outputs to states** unless all transitions **into 
 |**Moore → Mealy**|Move output from **state to transition**|Use the **output of the next state**|
 |**Mealy → Moore**|Move output from **transition to state**|**Duplicate states** if needed to fix outputs|
 
+![[Conversion - 1.png]]
+<br><br>
+![[Moore to Mealy - 1.png]]
